@@ -1,3 +1,7 @@
+Sat Apr 10 16:29:29 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds.h src/tds/log.c:
+	- add TDS_LIKELY/TDS_UNLIKELY macro and use them for logging
+
 Sat Apr 10 16:21:49 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h src/tds/log.c:
 	- make execution faster if log disabled (patch from Steve Brown)
@@ -2392,4 +2396,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3008 2010/04/10 14:22:09 freddy77 Exp $
+$Id: ChangeLog,v 1.3009 2010/04/10 14:29:36 freddy77 Exp $
